--- a/DXR-Hybrid-Rendering-main/HybridRenderingPipeline/HybridRendering.vcxproj
+++ b/DXR-Hybrid-Rendering-main/HybridRenderingPipeline/HybridRendering.vcxproj
@@ -197,6 +197,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <CodeAnalysisRuleSet>CppCoreCheckArithmeticRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
