--- a/DXR-Hybrid-Rendering-main/PathTracingPipeline/PathTracing.vcxproj
+++ b/DXR-Hybrid-Rendering-main/PathTracingPipeline/PathTracing.vcxproj
@@ -96,6 +96,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <CodeAnalysisRuleSet>MixedRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
